--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./src/app.js"
+    "start": "node ./src/app.js",
+    "dev": "nodemon ./src/app.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +15,9 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "moment": "^2.30.1",
+    "socket.io": "^4.7.4"
+  },
+  "devDependencies": {
     "nodemon": "^3.0.3"
   }
 }
